# tree-sitter-fisl

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  gen.sh  go.mod  grammar.js  init.lua  install.sh  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-fisl.pc.in
bindings/c/tree_sitter/: tree-sitter-fisl.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_fisl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFislTests/: TreeSitterFislTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
